<resources>
    <string name="app_name">Movie Stand</string>

    <!-- Ipsum Lorem-->
    <string name="ipsum_small">Lorem ipsum</string>
    <string name="ipsum_medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sollicitudin lacus orci, egestas rhoncus erat facilisis sed.</string>
    <string name="ipsum_big">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sollicitudin lacus orci, egestas rhoncus erat facilisis sed. Sed efficitur massa id nibh sagittis consequat in nec libero. Quisque mollis sagittis dui, quis scelerisque orci iaculis ac. Phasellus sed pulvinar libero. Cras et rutrum massa, ac aliquet leo. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aenean neque erat, elementum at turpis sed, mattis feugiat ipsum. Vivamus semper risus et nisi vehicula, ac tempus nibh consectetur.</string>

    <!--Bottom Main Menu-->
    <string name="menu_item_search">Search</string>
    <string name="menu_item_favorites">Favorites</string>
    <string name="menu_item_list">My List</string>

    <!-- Search Fragment-->
    <string name="search_hint">Search Movie</string>
    <string name="search_our_recommendations">Our Recommendations</string>
    <string name="search_our_recommendations_fail">Recommendations not found</string>
    <string name="search_type">Type Movie Title</string>
    <string name="search_keep_type">Keep Typing… \n\n(3 characters minimum)</string>
    <string name="search_searching">Searching…</string>

    <!-- Favorites Fragment-->
    <string name="favorites_title">My favorite movies</string>
    <string name="favorites_message">Empty favorites list</string>

    <!-- Generics-->
    <string name="year">Year:</string>

    <!--Details-->
    <string name="details_released">Released:</string>
    <string name="details_runtime">Duration:</string>
    <string name="details_genre">Genre:</string>
    <string name="details_director">Director:</string>
    <string name="details_writer">Writer:</string>
    <string name="details_directors">Directors:</string>
    <string name="details_writers">Writers:</string>
    <string name="details_actors">Actors:</string>
    <string name="details_rating">Rating:</string>
    <string name="details_plot">Resume:</string>
    <string name="details_error_save">An error has occurred</string>

    <!--List-->
    <string name="list_title">My Movie List</string>
    <string name="list_order_by">Order by: </string>
    <string name="list_order_by_titles">Title</string>
    <string name="list_order_by_rating">Rating</string>
    <string name="list_order_by_release">Release</string>
    <string name="list_unrated">Unrated</string>

    <string name="list_message">Empty list</string>
</resources>
