<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/list_title"
        style="@style/TitleText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_extra_small"
        android:text="@string/list_order_by"
        style="@style/LightText"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:orientation="horizontal"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_medium">

        <Button
            android:id="@+id/list_button_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/margin_small"
            android:text="@string/list_order_by_titles"
            android:background="@drawable/bg_button_border"
            android:textColor="@color/reddish"
            style="@style/NormalText"/>

        <Button
            android:id="@+id/list_button_rating"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:text="@string/list_order_by_rating"
            android:background="@drawable/bg_button_border"
            android:textColor="@color/reddish"
            style="@style/NormalText"/>

        <Button
            android:id="@+id/list_button_release"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin_small"
            android:text="@string/list_order_by_release"
            android:background="@drawable/bg_button_border"
            android:textColor="@color/reddish"
            style="@style/NormalText"/>
    </LinearLayout>

    <TextView
        android:id="@+id/list_empty_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_big"
        android:layout_marginBottom="@dimen/margin_big"
        android:text="@string/list_message"
        android:textAlignment="center"
        android:visibility="visible"
        style="@style/NormalText"/>
    <View
        android:id="@+id/list_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider"
        android:background="@color/reddish"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>