<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:orientation="vertical">


     <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/details_released_label"
            style="@style/LightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:text="@string/details_released"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <TextView
            android:id="@+id/details_released_text"
            style="@style/NormalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_small"
            app:layout_constraintStart_toStartOf="@+id/details_released_label"
            app:layout_constraintTop_toBottomOf="@+id/details_released_label"
            tool:text="01/01/1900" />

        <TextView
            android:id="@+id/details_runtime_label"
            style="@style/LightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_runtime"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <TextView
            android:id="@+id/details_runtime_text"
            style="@style/NormalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_small"
            app:layout_constraintStart_toStartOf="@+id/details_runtime_label"
            app:layout_constraintTop_toBottomOf="@+id/details_runtime_label"
            tool:text="110 min" />

        <TextView
            android:id="@+id/details_rating_label"
            style="@style/LightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_rating"
            app:layout_constraintStart_toStartOf="@+id/details_rating_text"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <TextView
            android:id="@+id/details_rating_text"
            style="@style/TitleText"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/margin_extra_small"
            android:layout_marginEnd="@dimen/margin_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_rating_label"
            android:background="@drawable/bg_red_big_rounded"
            android:gravity="center"
            tool:text="8.8" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.42" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/margin_medium" />

        <TextView
            android:id="@+id/details_genre_text"
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_small"
            android:paddingStart="@dimen/margin_medium"
            android:paddingEnd="@dimen/margin_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_genre_label"
            tool:text="@string/ipsum_small" />

         <TextView
             android:id="@+id/details_genre_label"
             style="@style/LightText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:text="@string/details_genre"
             app:layout_constraintStart_toStartOf="@+id/details_released_label"
             app:layout_constraintTop_toBottomOf="@+id/details_released_text" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/details_director_label"
        style="@style/LightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_big"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:text="@string/details_directors"/>

    <TextView
        android:id="@+id/details_director_text"
        style="@style/NormalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_extra_small"
        android:paddingStart="@dimen/margin_medium"
        android:paddingEnd="@dimen/margin_medium"
        tool:text="@string/ipsum_medium" />

    <TextView
        android:id="@+id/details_writer_label"
        style="@style/LightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_big"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:text="@string/details_writers"/>

    <TextView
        android:id="@+id/details_writer_text"
        style="@style/NormalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_extra_small"
        android:paddingStart="@dimen/margin_medium"
        android:paddingEnd="@dimen/margin_medium"
        tool:text="@string/ipsum_medium" />

    <TextView
        android:id="@+id/details_actors_label"
        style="@style/LightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_big"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:text="@string/details_actors"/>

    <TextView
        android:id="@+id/details_actors_text"
        style="@style/NormalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_extra_small"
        android:paddingStart="@dimen/margin_medium"
        android:paddingEnd="@dimen/margin_medium"
        tool:text="@string/ipsum_medium" />

    <TextView
        android:id="@+id/details_plot_label"
        style="@style/LightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_big"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:text="@string/details_plot"/>

    <TextView
        android:id="@+id/details_plot_text"
        style="@style/NormalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_extra_small"
        android:layout_marginBottom="@dimen/margin_big"
        android:paddingStart="@dimen/margin_medium"
        android:paddingEnd="@dimen/margin_medium"
        tool:text="@string/ipsum_big" />

</LinearLayout>