<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/search_parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/gray_dark">

    <TextView
        android:id="@+id/search_recommendations_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_big"
        android:layout_below="@id/search_wrapper_layout"
        android:text="@string/search_our_recommendations"
        style="@style/TitleText"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/search_recommendations_recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_medium"
        android:requiresFadingEdge="vertical"
        android:fadingEdge="vertical"
        android:fadingEdgeLength="@dimen/margin_small"
        android:layout_below="@id/search_recommendations_title"/>

    <TextView
        android:id="@+id/search_recommendations_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_big"
        android:layout_below="@id/search_recommendations_title"
        android:visibility="gone"
        android:text="@string/search_our_recommendations_fail"
        style="@style/NormalText"/>

    <View
        android:id="@+id/search_semi_transparent_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_dark"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/search_wrapper_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_big"
        android:background="@drawable/bg_white_rounded"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageSwitcher
            android:id="@+id/search_image"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/search_hint" />

        <com.dasilvacarlos.moviesstand.presentation.library.custom_views.ExtendedEditText
            android:id="@+id/search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_extra_small"
            android:background="@android:color/transparent"
            android:fontFamily="@font/comfortaa_regular"
            android:hint="@string/search_hint"
            android:inputType="textShortMessage"
            android:textColor="@color/gray_medium"
            android:textColorHint="@color/gray_light"
            android:imeOptions="actionSearch"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/search_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/search_wrapper_layout"
        android:visibility="gone"/>
</RelativeLayout>